Force "file.encoding" to UTF-8.
Windows was writing out the degree symbol using the Windows-1252
encoding rather than UTF-8.