@@ -926,6 +926,7 @@
       <sysproperty key="visad.java3d.textureNpot" value="true" />
       <sysproperty key="visad.java3d.imageByRef" value="true" />
       <sysproperty key="visad.java3d.geometryByRef" value="true" />
+      <sysproperty key="file.encoding" value="UTF-8" />
       <sysproperty key="python.security.respectJavaAccessibility" value="false" />
       <!--
       <sysproperty key="sun.java2d.opengl" value="True" />
@@ -979,6 +980,7 @@
       <sysproperty key="visad.java3d.textureNpot" value="true" />
       <sysproperty key="visad.java3d.imageByRef" value="true" />
       <sysproperty key="visad.java3d.geometryByRef" value="true" />
+      <sysproperty key="file.encoding" value="UTF-8" />
       <sysproperty key="python.security.respectJavaAccessibility" value="false" />
 
       <arg value="-forceaqua" />
@@ -1019,6 +1021,7 @@
       <sysproperty key="debug.localadde.rootdir" value="${addeservers.dir}" />
       <sysproperty key="debug.adde.reqs" value="true" />
       <sysproperty key="logback.configurationFile" value="${logback.default.config}" />
+      <sysproperty key="file.encoding" value="UTF-8" />
       <sysproperty key="python.security.respectJavaAccessibility" value="false" />
       <!--<sysproperty key="idv.usetimedriver" value="true" />-->
       <arg value="-forceaqua" />
@@ -1032,26 +1035,26 @@
             <classpath refid="app.classpath" />
             <assertions refid="mcv.assertions"/>
             
-            <!-- required for jython stuff to work without jigsaw-specific changes -->
-            <jvmarg value="--permit-illegal-access"/>
-            <jvmarg value="--add-exports" />
-            <jvmarg value="java.base/com.sun.net.ssl.internal.ssl=ALL-UNNAMED" />
-            <jvmarg value="--add-exports" />
-            <jvmarg value="java.base/jdk.internal.loader=ALL-UNNAMED" />
-            <jvmarg value="--add-exports" />
-            <jvmarg value="java.desktop/com.sun.java.swing.plaf.gtk=ALL-UNNAMED" />
-            <jvmarg value="--add-exports" />
-            <jvmarg value="java.desktop/sun.awt=ALL-UNNAMED" />
-            <jvmarg value="--add-exports" />
-            <jvmarg value="java.desktop/sun.swing=ALL-UNNAMED" />
-            <jvmarg value="--add-opens" />
-            <jvmarg value="java.base/java.lang=ALL-UNNAMED" />
-            <jvmarg value="--add-opens" />
-            <jvmarg value="java.base/java.lang.reflect=ALL-UNNAMED" />
-            <jvmarg value="--add-opens" />
-            <jvmarg value="java.management/sun.management=ALL-UNNAMED" />
-            <jvmarg value="--add-opens" />
-            <jvmarg value="jdk.management/com.sun.management.internal=ALL-UNNAMED" />
+            <!--&lt;!&ndash; required for jython stuff to work without jigsaw-specific changes &ndash;&gt;-->
+            <!--<jvmarg value="&#45;&#45;permit-illegal-access"/>-->
+            <!--<jvmarg value="&#45;&#45;add-exports" />-->
+            <!--<jvmarg value="java.base/com.sun.net.ssl.internal.ssl=ALL-UNNAMED" />-->
+            <!--<jvmarg value="&#45;&#45;add-exports" />-->
+            <!--<jvmarg value="java.base/jdk.internal.loader=ALL-UNNAMED" />-->
+            <!--<jvmarg value="&#45;&#45;add-exports" />-->
+            <!--<jvmarg value="java.desktop/com.sun.java.swing.plaf.gtk=ALL-UNNAMED" />-->
+            <!--<jvmarg value="&#45;&#45;add-exports" />-->
+            <!--<jvmarg value="java.desktop/sun.awt=ALL-UNNAMED" />-->
+            <!--<jvmarg value="&#45;&#45;add-exports" />-->
+            <!--<jvmarg value="java.desktop/sun.swing=ALL-UNNAMED" />-->
+            <!--<jvmarg value="&#45;&#45;add-opens" />-->
+            <!--<jvmarg value="java.base/java.lang=ALL-UNNAMED" />-->
+            <!--<jvmarg value="&#45;&#45;add-opens" />-->
+            <!--<jvmarg value="java.base/java.lang.reflect=ALL-UNNAMED" />-->
+            <!--<jvmarg value="&#45;&#45;add-opens" />-->
+            <!--<jvmarg value="java.management/sun.management=ALL-UNNAMED" />-->
+            <!--<jvmarg value="&#45;&#45;add-opens" />-->
+            <!--<jvmarg value="jdk.management/com.sun.management.internal=ALL-UNNAMED" />-->
             <!-- Prepares the JVM for a debugging session on port 8001 -->
             <jvmarg value="-Xdebug"/>
             <jvmarg value="-Xrunjdwp:transport=dt_socket,server=y,address=8001,suspend=y"/>
@@ -1071,6 +1074,7 @@
             <sysproperty key="debug.localadde.rootdir" value="${addeservers.dir}" />
             <sysproperty key="debug.adde.reqs" value="true" />
             <sysproperty key="logback.configurationFile" value="${logback.default.config}" />
+            <sysproperty key="file.encoding" value="UTF-8" />
             <sysproperty key="python.security.respectJavaAccessibility" value="false" />
 
             <arg value="-forceaqua" />
